[tool.poetry]
name = "rpc-proxy"
version = "0.1.0"
description = "Transparent Proxy to call rpc APIs"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
Flask = "^2.3.3"
Flask-Cors= "^4.0.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
